global.css update

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: 'Product Sans';
+	src: url('/fonts/Product-Sans/Product Sans Regular.ttf');
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Product Sans';
+	src: url('/fonts/Product-Sans/Product Sans Bold.ttf');
+	font-style: normal;
+	font-weight: 600;
+	font-display: swap;
+}
